--- a/components/ocaxdkcf2-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ocaxdkcf2-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ocaxdkcf2-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:01e0ed59ba62a12fb20bfc69855b1b1eec61c7d8@sha256:fe40387ad0693980c38e6b981ad7b3c25860fac5b6ad2abf0b9c6d483d972f0c
+          name: container-image
